# comapareImage

./: CMakeLists.txt  main.cpp
